# MoneyShot.rs

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/api/: api.rs  btc.rs  mod.rs  models.rs
src/api/alpha/: btc.rs  mod.rs  models.rs
src/api/bitpanda/: btc.rs  mod.rs  models.rs
src/api/cryptowatch/: lib.rs  main.rs  mod.rs
src/cli/: cli.rs
src/notifier/: email.rs  mod.rs  notifier.rs
src/repository/: buffer.rs  db.rs  json.rs  mod.rs  repository.rs
src/services/: mod.rs  models.rs  trades.rs
src/tui/: mod.rs
src/tui/app/: actions.rs  mod.rs  state.rs  ui.rs
src/tui/inputs/: events.rs  mod.rs
src/tui/io/: handler.rs  mod.rs
