[package]
name = "money_shot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
serde_json = "1.0.79"
serde = { version = "1", features = ["derive"] }
rbson = "2.0"
log = "0.4"
fast_log="1.3"
rbatis =  { version = "3.0" }
project-root = "0.2.2"
async-trait = "0.1.53"
lettre = "0.10.0-rc.4"
parking_lot = "0.10.2"
libmath = "0.2.1"
tui = "0.18.0"
crossterm = "0.23"
eyre = "0.6.8"
tui-logger = "0.8.0"
